Added per-test-package add-opens to the all-JUnit-tests launch
Retargeting the launch at TestSuite broke it under the module system:
for a container launch Eclipse computes --add-opens for every package
containing tests, but for a single-class launch it only opens the
launched class's package, so the JUnit engines (classpath, unnamed
module) could no longer reflectively access test classes in the other
packages of the patched nl.utwente.groove module. Every test failed
with IllegalAccessException.

The launch now carries an explicit --add-opens <module>/<package>=
ALL-UNNAMED VM argument for each of the 14 test packages, replicating
what Eclipse generated for the container launch (and what Surefire
generates itself in modular mode). A newly added test package needs a
matching line; the TestSuite javadoc says so.

Verified outside Eclipse by executing a JUnit-3-style test through the
platform launcher on an equivalent modular layout (main classes plus
required automatic modules on the module path, test classes patched
in, JUnit on the classpath): without the opens, vintage cannot access
the test class; with them, the test passes.